--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,11 +1,7 @@
 .main {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  margin: 0 auto;
-  //border: 1px solid #000;
+
 }
 
 body {
-  background-color: cadetblue;
+  //background-color: cadetblue;
 }
