--- a/src/components/MoviesList/MoviesList.scss
+++ b/src/components/MoviesList/MoviesList.scss
@@ -1,9 +1,9 @@
 .moviesList {
-  width: 1010px;
-  display: flex;
-  justify-content: center;
-  margin: 0 auto;
+  //width: 1010px;
+  //display: flex;
+  //justify-content: center;
+  //margin: 0 auto;
   //border: 1px solid #c70000;
-  flex-wrap: wrap;
-  gap: 24px;
+  //flex-wrap: wrap;
+  //gap: 24px;
 }
